New simplified API for ClassEmitter